--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             flex-grow: 1;
             width: 100%;
             height: 100%;
+            cursor: default;
         }
     </style>
 </head>
