--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>正縮尺路線図</title>
+    <title>正縮尺路線図ver1.1</title>
     <style>
         .container {
             display: flex;
