--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>正縮尺路線図ver1.1</title>
+    <title>正縮尺路線図ver1.2</title>
+    <!-- <link rel="icon" href="favicon.ico"> -->
+    <link rel="icon" href="siojyake007.png">
     <style>
         .container {
             display: flex;
